# llm_metrics_lite

./: CITATION.cff  README.md  contributing.md  pyproject.toml
examples/: example_llm_metrics_lite.ipynb  example_llm_metrics_lite_clean.ipynb  llm_metrics_lite_demo.ipynb  llm_metrics_lite_visuals.ipynb
examples/.ipynb_checkpoints/: llm_metrics_lite_demo-checkpoint.ipynb  llm_metrics_lite_visuals-checkpoint.ipynb
llm_metrics_lite/: __init__.py  cli.py  coherence.py  cost.py  eval.py  factuality.py  latency.py  lexical.py  numeric.py  perplexity.py  quality.py  readability.py  repetition.py  tokens.py  uncertinity.py
